--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -61,7 +61,7 @@ draw_bold_text_with_bright_colors: true
 font:
   # The normal (roman) font face to use.
   normal:
-    family: monospace # should be "Menlo" or something on macOS.
+    family: "Knack Nerd Font Mono"
     # Style can be specified to pick a specific face.
     # style: Regular
 
