--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,7 +7,9 @@
     ~/.config/i3/config:
       create: true
       path: config/i3/config
-    ~/.config/alacritty/alacritty.yml: config/alacritty/alacritty.yml
+    ~/.config/alacritty/alacritty.yml:
+      create: true
+      path: config/alacritty/alacritty.yml
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
