Add wallpapers and run compton when starting i3.

--- a/config/i3/config
+++ b/config/i3/config
@@ -9,6 +9,9 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
+exec feh --bg-scale --no-xinerama /usr/share/wallpapers/frosted.jpg
+exec compton
+
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
