Using nerd font for i3. Launching tmux on new sessions. Also, hid bottom bar in tmux. I am not using tmux for the panes/sessions, only for the scrollback support in alacritty. I am using i3 for the panes.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -13,6 +13,8 @@
     ~/.config/autorandr:
       create: true
       path: config/autorandr
+    ~/.tmux.conf:
+      path: tmux.conf
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
