--- a/config/i3/config
+++ b/config/i3/config
@@ -152,8 +152,4 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-bar {
-        status_command i3status
-}
+exec_always --no-startup-id "$HOME/.config/i3/startup"
