--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,6 +7,9 @@
     ~/.config/i3/config:
       create: true
       path: config/i3/config
+    ~/.config/i3/startup:
+      create: true
+      path: config/i3/startup
     ~/.config/alacritty/alacritty.yml:
       create: true
       path: config/alacritty/alacritty.yml
@@ -15,6 +18,9 @@
       path: config/autorandr
     ~/.tmux.conf:
       path: tmux.conf
+    ~/.config/polybar/config:
+      create: true
+      path: config/polybar/config
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
