Starting comptom before i3, with the xsession.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -3,6 +3,7 @@
 
 - link:
     ~/.gitconfig: gitconfig
+    ~/.xinitrc: xinitrc
     ~/.zshrc: zshrc
     ~/.zprofile: zprofile
     ~/.config/i3/config:
