--- a/config/i3/config
+++ b/config/i3/config
@@ -9,13 +9,11 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
-exec autorandr --load three && feh --bg-scale --no-xinerama /usr/share/wallpapers/frosted.jpg
-
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:Knack Nerd Font Mono
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -38,7 +36,7 @@ bindsym $mod+Return exec alacritty
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -i -fn 'DejaVu Sans-10' -l 10"
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -153,5 +151,7 @@ bindsym $mod+r mode "resize"
 
 # Gaps
 gaps inner 8
+
+for_window [class="Alacritty"] border pixel 10
 
 exec_always --no-startup-id "$HOME/.config/i3/startup"
