--- a/config/i3/config
+++ b/config/i3/config
@@ -75,7 +75,6 @@ bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1
@@ -113,7 +112,15 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Gaps
+# audio control
+bindsym XF86AudioRaiseVolume exec pulseaudio-ctl up
+bindsym XF86AudioLowerVolume exec pulseaudio-ctl down
+bindsym XF86AudioMute exec pulseaudio-ctl mute
+bindsym $mod+equal exec pulseaudio-ctl up
+bindsym $mod+minus exec pulseaudio-ctl down
+bindsym $mod+0 exec "pulseaudio-ctl mute"
+
+# gaps
 gaps inner 8
 
 for_window [class="Alacritty"] border pixel 4
