Using the custom menu bar.

--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -1,4 +1,5 @@
 {
     "terminal.integrated.fontFamily": "Hack",
-    "editor.fontFamily": "Hack"
+    "editor.fontFamily": "Hack",
+    "window.titleBarStyle": "custom"
 }
