Helper to check the weather. Using light theme in VSCode.

--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -1,5 +1,6 @@
 {
     "terminal.integrated.fontFamily": "Hack",
     "editor.fontFamily": "Hack",
-    "window.titleBarStyle": "custom"
+    "window.titleBarStyle": "custom",
+    "workbench.colorTheme": "Visual Studio Light"
 }
