Adding goland config. Added command to use local dev go.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -5,6 +5,7 @@
     ~/.gitconfig: gitconfig
     ~/.zshrc: zshrc
     ~/.config/Code/User/settings.json: config/Code/User/settings.json
+    ~/.GoLand2018.2/config/goland64.vmoptions: GoLand2018.2/config/goland64.vmoptions
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
   - command: dconf load / < settings.dconf
