--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,6 +1,11 @@
 
 - clean: ['~']
 
+- defaults:
+    link:
+        create: true
+        relink: true
+
 - link:
     ~/.gitconfig: gitconfig
     ~/.zshrc: zshrc
