--- a/config/autostart/fusuma.desktop
+++ b/config/autostart/fusuma.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Type=Application
-Exec=$HOME/.rbenv/shims/fusuma -d
+Exec=/usr/local/bin/fusuma -d
 Hidden=false
 NoDisplay=false
 X-GNOME-Autostart-enabled=true
