Added rider command and another command to download a sample video (for work).

--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -2,5 +2,6 @@
     "terminal.integrated.fontFamily": "Hack",
     "editor.fontFamily": "Hack",
     "window.titleBarStyle": "custom",
-    "workbench.colorTheme": "Visual Studio Light"
+    "workbench.colorTheme": "Visual Studio Light",
+    "bitbake.generateWorkingFolder": false
 }
