Ignoring recommendations in VSCode. Function to install boostnote. Function to sync boost notes with git repo.

--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -3,5 +3,6 @@
     "editor.fontFamily": "Hack",
     "window.titleBarStyle": "custom",
     "workbench.colorTheme": "Visual Studio Light",
-    "bitbake.generateWorkingFolder": false
+    "bitbake.generateWorkingFolder": false,
+    "extensions.ignoreRecommendations": true
 }
