Disable update check in vscode.

--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -4,5 +4,6 @@
     "window.titleBarStyle": "custom",
     "workbench.colorTheme": "Visual Studio Light",
     "bitbake.generateWorkingFolder": false,
-    "extensions.ignoreRecommendations": true
+    "extensions.ignoreRecommendations": true,
+    "update.mode": "none"
 }
