--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "zsh-config/plugins/zsh-syntax-highlighting"]
 	path = zsh-config/plugins/zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
+[submodule "z"]
+	path = z
+	url = https://github.com/rupa/z.git
