--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -3,6 +3,28 @@
     "editor.fontFamily": "Hack",
     "window.titleBarStyle": "custom",
     "workbench.colorTheme": "Visual Studio Light",
+    "workbench.colorCustomizations" : {
+        // solar coloring, just like my gnome-terminal
+        "terminal.foreground" : "#C7CBCC",
+        "terminal.background" : "#2E3E50",
+        "terminal.ansiBlack": "#073642",
+        "terminal.ansiRed": "#dc322f",
+        "terminal.ansiGreen": "#859900",
+        "terminal.ansiYellow": "#b58900",
+        "terminal.ansiBlue": "#268bd2",
+        "terminal.ansiMagenta": "#d33682",
+        "terminal.ansiCyan": "#2aa198",
+        "terminal.ansiWhite": "#eee8d5",
+        "terminal.ansiBrightBlack": "#002b36",
+        "terminal.ansiBrightRed": "#cb4b16",
+        "terminal.ansiBrightGreen": "#586e75",
+        "terminal.ansiBrightYellow": "#657b83",
+        "terminal.ansiBrightBlue": "#839496",
+        "terminal.ansiBrightMagenta": "#6c71c4",
+        "terminal.ansiBrightCyan": "#93a1a1",
+        "terminal.ansiBrightWhite": "#fdf6e3"
+    },
+    "terminal.integrated.fontSize": 16,
     "bitbake.generateWorkingFolder": false,
     "extensions.ignoreRecommendations": true,
     "update.mode": "none"
