--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -17,8 +17,11 @@
     ~/.config/autostart/fusuma.desktop: config/autostart/fusuma.desktop
     ~/.config/fusuma/config.yml: config/fusuma/config.yml
     ~/.GoLand2018.2/config/goland64.vmoptions: GoLand2018.2/config/goland64.vmoptions
+    ~/.config/bat/themes/Solarized (dark).tmTheme: 3rdparty/textmate-solarized/Solarized (dark).tmTheme
+    ~/.config/bat/config: bat/config
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
   - command: dconf load / < settings.dconf
     description: Installing dconf settings
+  - [bat cache --build]
     
