--- a/local/share/applications/jetbrains-datagrip.desktop
+++ b/local/share/applications/jetbrains-datagrip.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Version=1.0
 Type=Application
-Name=JetBrains CLion
+Name=JetBrains DataGrip
 Icon=/home/pknopf/apps/datagrip/current/bin/datagrip.png
 Exec="/home/pknopf/apps/datagrip/current/bin/datagrip.sh" %f
 Comment=The Drive to Develop
