--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -20,6 +20,7 @@
     ~/.config/bat/themes/Solarized (dark).tmTheme: 3rdparty/textmate-solarized/Solarized (dark).tmTheme
     ~/.config/bat/config: bat/config
     ~/.config/onedrive/config: config/onedrive/config
+    ~/.config/broot/launcher/bash/br: config/broot/launcher/bash/br
     ~/.local/share/applications/jetbrains-clion.desktop: local/share/applications/jetbrains-clion.desktop
     ~/.local/share/applications/jetbrains-datagrip.desktop: local/share/applications/jetbrains-datagrip.desktop
     ~/.local/share/applications/jetbrains-rider.desktop: local/share/applications/jetbrains-rider.desktop
