--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -37,5 +37,7 @@
     "rust.rls": {
         "useRustfmt": true
     },
-    "window.zoomLevel": 1
+    "window.zoomLevel": 1,
+    "plantuml.server": "http://localhost:8080",
+    "plantuml.render": "PlantUMLServer"
 }
