Adding spacemacs default config.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -13,6 +13,7 @@
     ~/.profile: profile
     ~/.npmrc: npmrc
     ~/.tmux.conf: tmux.conf
+    ~/.spacemacs: spacemacs
     ~/.config/Code/User/settings.json: config/Code/User/settings.json
     ~/.config/autostart/fusuma.desktop: config/autostart/fusuma.desktop
     ~/.config/fusuma/config.yml: config/fusuma/config.yml
