--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,6 +7,7 @@
         relink: true
 
 - link:
+    ~/.quiltrc: quiltrc
     ~/.gitconfig: gitconfig
     ~/.zshrc: zshrc
     ~/.zprofile: zprofile
