Updating install scripts.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -24,6 +24,8 @@
     ~/.local/share/applications/jetbrains-clion.desktop: local/share/applications/jetbrains-clion.desktop
     ~/.local/share/applications/jetbrains-datagrip.desktop: local/share/applications/jetbrains-datagrip.desktop
     ~/.local/share/applications/jetbrains-rider.desktop: local/share/applications/jetbrains-rider.desktop
+    ~/.local/share/applications/jetbrains-goland.desktop: local/share/applications/jetbrains-goland.desktop
+    ~/.local/share/applications/xlights.desktop: local/share/applications/xlights.desktop
     ~/.config/redshift.conf: config/redshift.conf
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
