--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -40,5 +40,6 @@
     "window.zoomLevel": 1,
     "plantuml.server": "http://localhost:8080",
     "plantuml.render": "PlantUMLServer",
-    "arduino.path": "/home/pknopf/apps/arduino/arduino-1.8.16"
+    "arduino.path": "/home/pknopf/apps/arduino/arduino-1.8.16",
+    "git.terminalAuthentication": false
 }
