--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -37,9 +37,10 @@
     "rust.rls": {
         "useRustfmt": true
     },
-    "window.zoomLevel": 1,
     "plantuml.server": "http://localhost:8080",
     "plantuml.render": "PlantUMLServer",
     "arduino.path": "/home/pknopf/apps/arduino/arduino-1.8.16",
-    "git.terminalAuthentication": false
+    "git.terminalAuthentication": false,
+    "python.defaultInterpreterPath": "python3",
+    "window.zoomLevel": 1
 }
